# cuda-plasma-simulation

./: .clang-format  .gitignore  .pre-commit-config.yaml  2dMHD.sln  2dMHD.vcxproj  2dMHDProject.sln  2dMHDProject.vcxproj  CMakeLists.txt  README.md  function.h  main.cu  plasma2D.sln  plasma2D.vcxproj  plasma2D.vcxproj.filters  time
configs/: fluid1024.yaml  standart1024.yaml
include/: Configs.h  Writer.h
include/cuda/: Buffers.cuh  FastFourierTransformator.cuh  Helper.cuh  HelperKernels.cuh  KernelCaller.cuh  Painter.cuh  Solver.cuh  SolverKernels.cuh
include/openGL/: Creater.h  IndexBuffer.h  Renderer.h  Textures.h  VertexArray.h  VertexBufferLayout.h
include/opengl/: Creater.h  IndexBuffer.h
lib/GLEW/include/GL/: glew.h  glxew.h  wglew.h
lib/GLWF/include/GLFW/: glfw3native.h
lib/yaml-cpp/include/yaml-cpp/: binary.h
lib/yaml-cpp/include/yaml-cpp/contrib/: graphbuilder.h
lib/yaml-cpp/include/yaml-cpp/node/: iterator.h  node.h
lib/yaml-cpp/include/yaml-cpp/node/detail/: node_data.h
lib/yaml-cpp/lib/: yaml-cpp.lib
outputs/: time.txt
outputs/data/20240201/20240201_145427/: out
outputs/data/20240201/20240201_145427/outJ/: out0  out1  out10  out13  out16  out17  out20  out21  out22  out23  out28  out30  out32  out34  out35  out36  out4  out41  out42  out45  out48  out5  out50  out9
outputs/data/20240201/20240201_145427/outW/: out0  out1  out11  out12  out13  out14  out16  out17  out2  out20  out21  out22  out25  out29  out32  out34  out36  out37  out38  out39  out40  out43  out45  out49  out5
outputs/data/20240201/20240201_145502/: out2
outputs/data/20240201/20240201_145502/outJ/: out11  out12  out14  out15  out18  out19  out2  out24  out25  out26  out27  out29  out3  out31  out33  out37  out38  out39  out40  out43  out44  out46  out47  out49  out6  out7  out8
outputs/data/20240201/20240201_145502/outW/: out10  out15  out18  out19  out23  out24  out26  out27  out28  out3  out30  out31  out33  out35  out4  out41  out42  out44  out46  out47  out48  out50  out6  out7  out8  out9
res/colormaps/: winter
res/shaders/: basic.shader
resources/colormaps/: plasma
src/: Application.cpp  Application.cu  Application.cuh  Buffers.cuh  Configs.cpp  Configs.h  EquationSolver.cuh  FastFourierTransformator.cuh  Helper.cuh  HelperKernels.cuh  InitialFields.cuh  IntegralFunctions.cuh  Jacobian.cuh  KernelCaller.cuh  Params.h  SimpleFunctions.cuh  Solver.cuh  SolverKernels.cuh  Writer.cpp  Writer.cuh  Writer.h  function.h  kernels.cu  kernels.cuh  main.cpp
src/cuda/: Buffers.cu  Buffers.cuh  FastFourierTransformator.cu  Helper.cu  Helper.cuh  HelperKernels.cuh  KernelCaller.cuh  Painter.cu  Painter.cuh  PainterKernels.cuh  Solver.cu  Solver.cuh  SolverKernels.cuh  Writer.cu  Writer.cuh
src/graphics/: fpng.h
src/matlab/: spectrum.m  spectrumOnT.m
src/openGL/: Creater.cpp  Creater.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Textures.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/png/: Painter.cpp  Painter.h  fpng.cpp
